# common

./: .gitignore  Makefile.am  README.es.md  README.md  README.pt-BR.md  bootstrap  common-installer.sh  configure.ac
src/: README.es.md  README.md  README.pt-BR.md
src/DB/: 00-create-database.sql  02-index-sources-citation.sql  README.es.md  README.md  README.pt-BR.md
src/DB/nosql/: 00-create-collection.js  01-create-indexes.js  01-create-source-format.js  02-create-file.js  03-create-citation.js  03-create-files.js  README.es.md  README.md  README.pt-BR.md
src/DB/sql/: 01-create-source-format.sql  01-create-sources.sql  02-create-sources.sql  03-create-file.sql  04-create-files.sql  05-create-citation.sql  README.es.md  README.md  README.pt-BR.md
src/android/: build.gradle.kts
src/android/src/main/java/com/historytracers/common/: AtlasTemplateFile.java  ClassContent.java  ClassContentValue.java  ClassIdx.java  ClassTemplateContent.java  ClassTemplateFile.java  CreatorUtils.java  Family.java  FamilyBody.java  FamilyPerson.java  FamilyPersonChild.java  FamilyPersonEvent.java  FamilyPersonHaplogroup.java  FamilyPersonMarriage.java  FamilyPersonParents.java  HTAudio.java  HTCommonContent.java  HTConfigBase.java  HTDate.java  HTExercise.java  HTGameDesc.java  HTKeywordsFormat.java  HTMap.java  HTMathKeywordsFormat.java  HTOldFileFormat.java  HTSource.java  HTSourceElement.java  HTSourceFile.java  HTText.java  IdxFamily.java  IdxFamilyContent.java  IdxFamilyValue.java  SMGameContent.java  SMGameFile.java  SMGameLevel.java  TimestampUtils.java
src/go/: config_test.go  creator_test.go  data-type.go  data-type_test.go  timestamp_test.go
